--- a/Bcfier.Renga/RengaWindow.xaml
+++ b/Bcfier.Renga/RengaWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<Window
-  x:Class="Bcfier.Renga.RengaWindow"
+  x:Class="Bcfier.RengaPlugin.RengaWindow"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:ctr="clr-namespace:Bcfier.UserControls;assembly=Bcfier"
